--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,10 @@
 .main__dashboard
 {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+  min-width: 100vw;
 }
 
 .aside__right__home
