--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,3 +1,11 @@
+:root
+{
+  --toastify-color-light: #E9ECEF;
+  --toastify-icon-color-success:#FD377E;
+  --toastify-color-progress-success: #FD377E;
+  --toastify-text-color-light:#212529;
+}
+
 .li__container
 {
   display: flex;
@@ -12,16 +20,8 @@
 
   border-left: solid #03B898 4px;
   transition: all ease .7s;
-  
 
 }
-  .li__container:hover, .li__container__despesa:hover
-  {
-    cursor: pointer;
-    background-color: #E9ECEF;
-    box-shadow: 0px 0px 30px #212529;
-
-  }
 
 .li__container__despesa
 {
@@ -34,7 +34,7 @@
   border-radius: 4px;
   height: 87px ;
   width: 90vw;
-  border-left: solid red 4px;
+  border-left: solid #E9ECEF 4px;
   transition: all ease .7s;
 }
 
@@ -61,7 +61,7 @@
   line-height: 22px;
 
   width: 100%;
-  text-align: right;
+  text-align: left;
   height: 27px;
 
   color: #868E96;
@@ -84,8 +84,26 @@
 .value__container p
 {
   text-align: start;
+  margin: 50px;
 }
 
+.remove__item
+{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  min-width: 15vw;
+  height: 87px;
+}
+
+.remove__item img, .remove__item button
+{
+  border: none;
+  height: 22px;
+  width: 22px;
+  cursor: pointer;
+
+}
 
 @media screen and (min-width: 768px){
 
