--- a/src/components/TotalMoney/styles.css
+++ b/src/components/TotalMoney/styles.css
@@ -6,15 +6,16 @@
 
   border: 1px solid #E9ECEF;
   border-radius: 4px;
-
-
   width: 100%;
-
   margin-top: 25px;
-
-  box-shadow: 0px 10px 30px #212529;
+  
+  transition: all ease .7s;
 
 }
+  .saldo:hover
+  {
+    border: solid 1px #212529;
+  }
 
 .saldo h2
 {
