--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -17,6 +17,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  margin-left: 20px;
  
 }
 
@@ -67,6 +69,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  margin-right: 20px;
 
 }
 
@@ -75,13 +78,12 @@
   height: 40vh;
 }
 
-@media screen and (min-width: 611px){
+@media screen and (min-width: 639px){
 
   .main__title, .p__home
   {
     text-align: start;
 
-    /* background-color: #FD377E; */
   }
 
   .start
